Removed(ksp): reject suspend processor methods (#834)
* Removed(ksp): reject suspend processor methods

Removed(ksp): Breaking: reject suspend methods in database repositories,
HTTP clients and controllers, S3 clients, and scheduled jobs. Diagnostics
recommend Java StructuredTaskScope with --enable-preview.

This removes incomplete coroutine support that could lose ScopedValue-backed
context and block HTTP worker threads through runBlocking.

* Minor ver updated