@@ -2,6 +2,9 @@ package io.koraframework.s3.client.symbol.processor
 
 import io.koraframework.common.annotation.Tag
 import io.koraframework.s3.client.kora.symbol.processor.AbstractS3ClientTest
+import io.koraframework.s3.client.kora.symbol.processor.S3ClientSymbolProvider
+import io.koraframework.ksp.common.exception.ProcessingErrorException
+import org.assertj.core.api.Assertions.assertThatThrownBy
 import org.assertj.core.api.Assertions.assertThat
 import org.junit.jupiter.api.Test
 
@@ -27,5 +30,27 @@ class S3ClientSymbolProcessorTest : AbstractS3ClientTest() {
         val clientFactoryTag = clientImpl.parameters[0].getAnnotation(Tag::class.java)
 
         assertThat(clientFactoryTag.value.java).isEqualTo(loadClass("Client\$CustomS3FactoryTag"))
+    }
+
+    @Test
+    fun testSuspendMethodIsRejected() {
+        assertThatThrownBy {
+            compile0(
+                listOf(S3ClientSymbolProvider()),
+                """
+                @S3.Client
+                interface Client {
+                    @S3.List
+                    suspend fun list(@Bucket bucket: String): List<String>
+                }
+                """.trimIndent()
+            )
+        }.isInstanceOfSatisfying(ProcessingErrorException::class.java) {
+            assertThat(it.message)
+                .contains("Suspend methods are not supported by the S3 client generator")
+                .contains("--enable-preview")
+                .contains("StructuredTaskScope.open")
+                .contains("Remove suspend from the method")
+        }
     }
 }
